name:               thorn
version:            0.1.0.0
synopsis:           Batch sound file editor
homepage:           github.com/b4winckler/thorn
license:            BSD3
license-file:       LICENSE
author:             Björn Winckler
maintainer:         bjorn.winckler@gmail.com
category:           Sound
build-type:         Simple
cabal-version:      >=1.8

executable thorn
  main-is:          Main.hs
  hs-source-dirs:   src
  build-depends:    base == 4.6.*,
                    taglib >= 0.1,
                    optparse-applicative >= 0.5
